--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ body {
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
-.controls {margin-top:50px; display:flex; flex-direction:column; align-items:center;}
+.controls {margin-top:40px; display:flex; flex-direction:column; align-items:center;}
 .controls .controls__range {margin-bottom:30px;}
+.controls .controls__range span {display:block; text-align:center; margin-bottom:10px}
 
 .controls .controls__btns {margin-bottom:20px;}
 
@@ -26,11 +27,12 @@ body {
 
 .controls__btns button:active {transform:scale(0.98);}
 
+.changeColor {display:block; margin:10px 0 15px 0;}
 .controls .controls__colors {display:flex;}
 
 .controls__colors .controls__color {
-    width:50px;
-    height:50px;
+    width:40px;
+    height:40px;
     border-radius:50%;
     margin:0 5px;
     cursor:pointer;
